--- a/css/default.css
+++ b/css/default.css
@@ -1,18 +1,18 @@
 @charset"UTF-8";
 
 h1{
-  font-size:20px;
+  font-size:1em;
   background-color:#afeeee;
 }
 h2{
-  font-size:20px;
+  font-size:1em;
   font-weight:bold;
 }
 h3{
-  font-size:20px;
+  font-size:1em;
   border:#40e0d0 2px dotted;
   border-left:#afeeee 5px solid;
 }
 h4{
-  font-size:20px;
+  font-size:1em;
 }
