--- a/css/default.css
+++ b/css/default.css
@@ -13,9 +13,9 @@ h3{
   border:#40e0d0 2px dotted;
   border-left:#afeeee 5px solid;
 }
-h4{
+/*h4{
   font-size:1em;
-}
+}*/
 h4 span{
   font-size:1em;
 }
