--- a/css/default.css
+++ b/css/default.css
@@ -9,8 +9,7 @@ h1{
   background-color:#afeeee;
 }
 .weight{
-  font-style:bold;
-  font-weight:900;
+  font-weight:bold;
 }
 #waku{
   font-size:1em;
