--- a/css/default.css
+++ b/css/default.css
@@ -4,7 +4,7 @@ body{
   background-image: url(../webp1/image1.jpg);
   background-repeat: no-repeat;
 }
-h1{
+p1{
   font-size:1em;
   background-color:#afeeee;
 }
@@ -17,6 +17,6 @@ h1{
   border-left:#afeeee 5px solid;
 }
 
-h4 span{
+p4 span{
   font-size:3em;
 }
